[package]
name = "openworldgameopt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_atmosphere = "0.7.0"
bevy_rapier3d = "0.22.0"
bevy_render = "0.11.2"
bytemuck = "1.13.1"
noise = "0.8"
rand = "0.8.5"
glam = "0.23.0"
bevy-aabb-instancing = { git = "https://github.com/teh-cmc/bevy_aabb_instancing", branch = "cmc/bevy_011" }
bevy_fps_controller = "0.2.2"
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
